[package]
name = "rruxwry"
version = "0.1.0"
edition = "2024"
description = "A wrapper around rust{,do}c for rust{,do}c devs"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.23" }
joinery = "3.1.0"
open = "5.3.1"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
ra-ap-rustc_lexer = "0.86.0"
rustc-hash = "2.1.0"
shlex = "1.3.0"
smallvec = { version = "1.13.1", features = ["const_generics"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
