[package]
name = "rruxwry"
version = "0.1.0"
edition = "2024"
description = "A wrapper around rust{,do}c for rust{,do}c devs"
license = "MIT"
publish = false

[dependencies]
anstyle = "1.0.10"
# FIXME: Decide whether to use `supports-color`, `anstyle-query`,
#        another crate or a custom impl for terminal color detection.
# NOTE:  Get rid of this. Right now we're commited to it as `clap` also uses it.
# NOTE:  We're only using it for enum `ColorChoice` & `ColorChoice::auto`.
anstream = "0.6.18"
# FIXME: Get rid of this dependency smh.
clap = { version = "4.5.26" }
open = "5.3.2"
# FIXME: Write own implementation that tracks source location / span.
shlex = "1.3.0"
smallvec = "2.0.0-alpha.11"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
rustc-hash = "2.1.1"

[patch.crates-io]
# To eliminate the crate dependency `once_cell`.
is-docker = { path = "patch/is-docker" }
# To eliminate the crate dependency `once_cell`.
is-wsl = { path = "patch/is-wsl" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
