[package]
name = "is-wsl"
version = "0.4.0"
edition = "2024"
description = "Checks if the process is running inside Windows Subsystem for Linux."
license = "MIT"
publish = false

authors = ["Sean Larkin <TheLarkInn@users.noreply.github.com>"]
repository = "https://github.com/TheLarkInn/is-wsl"
categories = ["command-line-utilities"]

[dependencies]
is-docker = "0.2.0"
